<resources>
    <string name="app_name">Stundenplan</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="fragment_home">Home</string>
    <string name="fragment_timetable">@string/app_name</string>
    <string name="fragment_exam">Prüfung</string>
    <string name="fragment_exams">Prüfungen</string>
    <string name="fragment_task">Aufgabe</string>
    <string name="fragment_tasks">Aufgaben</string>
    <string name="fragment_lesson">Stunde</string>
    <string name="fragment_lessons">Stunden</string>
    <string name="fragment_subject">Fach</string>
    <string name="fragment_subjects">Fächer</string>
    <string name="fragment_teacher">Lehrer</string>
    <string name="fragment_teachers">Lehrer</string>
    <string name="fragment_room">Raum</string>
    <string name="fragment_rooms">Räume</string>
    <string name="fragment_year">Klasse</string>
    <string name="fragment_years">Klassen</string>
    <string name="fragment_examtype">Prüfungsart</string>
    <string name="fragment_examtypes">Prüfungsarten</string>
    <string name="fragment_schoollesson">Schulstunde</string>
    <string name="fragment_schoollessons">Schulstunden</string>
    <string name="fragment_info">Info</string>
    <string name="fragment_settings">Einstellungen</string>

    <string name="menu_verwalten">Verwalten</string>
    <string name="menu_einstellungen">Einstellungen</string>

    <string name="p_backup_manBackup">p_backup_manBackup</string>
    <string name="spc_backup_autoBackup">spc_backup_autoBackup</string>
    <string name="p_back_restore">p_back_restore</string>

    <string name="cbp_timetablesettings_abcycle">cbp_timetablesettings_abcycle</string>
    <string name="sp_timetablesettings_acycle">sp_timetablesettings_acycle</string>
    <string name="lp_personalize_design">lp_personalize_design</string>
    <string name="p_backup_manBackupExport">p_backup_manBackupExport</string>
    <string name="p_backup_importRestore">p_backup_importRestore</string>
    <string name="p_root_sample_data">p_root_sample_data</string>
    <string name="p_root_clear_database">p_root_clear_database</string>
    <string name="p_root_github">p_root_github</string>


</resources>
