<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    tools:showIn="navigation_view">-->


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_apps"
            android:title="@string/fragment_home" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_schedule"
            android:title="@string/fragment_timetable" />
        <item
            android:id="@+id/nav_exam"
            android:icon="@drawable/ic_grade"
            android:title="@string/fragment_exams" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_work"
            android:title="@string/fragment_tasks" />

    </group>

    <item android:title="@string/menu_verwalten">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_subject"
                    android:icon="@drawable/ic_widgets"
                    android:title="@string/fragment_subjects" />
                <item
                    android:id="@+id/nav_teacher"
                    android:icon="@drawable/ic_person"
                    android:title="@string/fragment_teachers" />
                <item
                    android:id="@+id/nav_room"
                    android:icon="@drawable/ic_room"
                    android:title="@string/fragment_rooms" />
                <item
                    android:id="@+id/nav_year"
                    android:icon="@drawable/ic_year"
                    android:title="@string/fragment_years" />
                <item
                    android:id="@+id/nav_examtype"
                    android:icon="@drawable/ic_list"
                    android:title="@string/fragment_examtypes" />
                <item
                    android:id="@+id/nav_schoollesson"
                    android:icon="@drawable/ic_school_lesson"
                    android:title="@string/fragment_schoollessons" />
            </group>
        </menu>
    </item>


    <item android:title="@string/menu_einstellungen">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/fragment_settings" />
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_info"
                    android:title="@string/fragment_info" />

            </group>
        </menu>
    </item>

</menu>