<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Sichern">

        <Preference
            app:key="@string/p_backup_manBackup"
            app:title="Manuelle Sicherung" />

        <SwitchPreference
            app:key="@string/spc_backup_autoBackup"
            app:title="Automatische Sicherung" />

        <Preference
            app:key="@string/p_backup_manBackupExport"
            app:title="Sichern und Exportieren (WIP)" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Wiederherstellen">

        <Preference
            app:key="@string/p_back_restore"
            app:title="Wiederherstellen" />

        <Preference
            app:key="@string/p_backup_importRestore"
            app:title="Externe Sicherung Wiederherstellen (WIP)" />

    </PreferenceCategory>

</PreferenceScreen>