<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main.FragmentHome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/ibtn_timetable"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:padding="32dp"
                        android:src="@drawable/ic_schedule"
                        android:tint="@color/green_500"
                        android:background="?android:selectableItemBackground"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_weight="9" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="Stundenplan"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="2">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <ImageButton
                            android:id="@+id/ibtn_subject"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="16dp"
                            android:src="@drawable/ic_widgets"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            android:layout_weight="85" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/fragment_subjects"
                            android:layout_weight="15"
                            android:layout_gravity="center"
                            android:gravity="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/ibtn_task"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="16dp"
                            android:src="@drawable/ic_work"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            android:layout_weight="85" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/fragment_tasks"
                            android:layout_weight="15"
                            android:layout_gravity="center"
                            android:gravity="center" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/ibtn_year"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="16dp"
                            android:src="@drawable/ic_year"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            android:layout_weight="85" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/fragment_years"
                            android:layout_weight="15"
                            android:layout_gravity="center"
                            android:gravity="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/ibtn_exam"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:padding="16dp"
                            android:src="@drawable/ic_grade"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            android:layout_weight="85" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/fragment_exams"
                            android:layout_weight="15"
                            android:layout_gravity="center"
                            android:gravity="center" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/version"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />


</RelativeLayout>